stop infinite loop of failing to open track, when in a looping playback mode. add Random playback. Prevent album text from overlapping track metadata

--- a/public_html/static/music_worklet_inprogress/music.css
+++ b/public_html/static/music_worklet_inprogress/music.css
@@ -108,6 +108,7 @@ body {
     max-width: 10%;
     max-height: 100%;
     padding-right: 5px;
+    min-width: 40px;
 }
 
 .trackmetadata {
